--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.5
+  dots_indicator: ^2.1.0
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +66,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
