--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.6.5
-  dots_indicator: ^2.1.0
-  http: ^0.13.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  dots_indicator: ^2.1.0
+  http: ^0.13.4
+  flutter_spinkit:
+
+
 
 dev_dependencies:
   flutter_test:
